Add CRUD & Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <h1>{{title}}</h1>
-<nav>
+<app-profile-editor></app-profile-editor>
+
+<!-- <app-name-editor></app-name-editor> -->
+<!-- <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/heroes">Heroes</a>
 </nav>  
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<app-messages></app-messages> -->
