--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -4,6 +4,7 @@
     <div>
       <label>name:
         <input [(ngModel)]="hero.name" placeholder="name"/><br/>
+        <button (click)="save()">save</button>
         <button (click)="onShout()">SHOUT!</button>
       </label>
     </div>    
